[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/themes/default.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/map_ui.gd" type="Script" id=2]

[node name="Map UI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 1536.0
margin_bottom = 836.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1536.0
margin_bottom = 72.0
mouse_filter = 2

[node name="MenuBtn" type="MenuButton" parent="VBox/HBox"]
margin_right = 42.0
margin_bottom = 42.0
rect_min_size = Vector2( 42, 42 )
size_flags_vertical = 0
text = ""
flat = false
items = [ " Giới thiệu", null, 0, false, false, 0, 0, null, "", false ]

[node name="Control" type="Control" parent="VBox/HBox"]
margin_left = 46.0
margin_right = 1395.0
margin_bottom = 72.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBox/HBox"]
margin_left = 1399.0
margin_right = 1536.0
margin_bottom = 72.0

[node name="Grid" type="GridContainer" parent="VBox/HBox/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 130.0
margin_bottom = 65.0

[node name="Label" type="Label" parent="VBox/HBox/PanelContainer/Grid"]
margin_right = 123.0
margin_bottom = 24.0
text = "Bản đồ nền: "

[node name="TypeChooser" type="OptionButton" parent="VBox/HBox/PanelContainer/Grid"]
margin_top = 28.0
margin_right = 123.0
margin_bottom = 58.0
text = "Hành chính"
items = [ "Vệ tinh", null, false, 0, null, "Hành chính", null, false, 1, null, "Giao thông", null, false, 2, null ]
selected = 1

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 76.0
margin_right = 1536.0
margin_bottom = 768.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBox3" type="HBoxContainer" parent="VBox"]
margin_top = 772.0
margin_right = 1536.0
margin_bottom = 836.0
mouse_filter = 2
alignment = 2

[node name="VBox" type="VBoxContainer" parent="VBox/HBox3"]
margin_left = 1507.0
margin_right = 1536.0
margin_bottom = 64.0
mouse_filter = 2

[node name="ZoomIn" type="Button" parent="VBox/HBox3/VBox"]
margin_right = 29.0
margin_bottom = 30.0
text = ""

[node name="ZoomOut" type="Button" parent="VBox/HBox3/VBox"]
margin_top = 34.0
margin_right = 29.0
margin_bottom = 64.0
text = ""

[connection signal="item_selected" from="VBox/HBox/PanelContainer/Grid/TypeChooser" to="." method="_on_TypeChooser_item_selected"]
[connection signal="pressed" from="VBox/HBox3/VBox/ZoomIn" to="." method="_on_ZoomIn_pressed"]
[connection signal="pressed" from="VBox/HBox3/VBox/ZoomOut" to="." method="_on_ZoomOut_pressed"]
